# lakesearch

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  DESIGN_V2.md
.claude/commands/: codex-review.md
demo/: README.md  config.yaml  demo.py  generate_data.py
lakesearch-admin/: Cargo.toml
lakesearch-admin/src/: backfill.rs  cas.rs  lib.rs  reconcile.rs  registry.rs  storage.rs
lakesearch-admin/src/server/: api_types.rs  config.rs  error.rs  handlers.rs  main.rs  mod.rs  routes.rs  state.rs
lakesearch-cli/: Cargo.toml
lakesearch-cli/src/: cas.rs  index.rs  lib.rs  main.rs  parquet_util.rs  query.rs  remote_index.rs  remote_query.rs  storage.rs
lakesearch-cli/tests/: integration.rs  remote_integration.rs
lakesearch-compactor/: Cargo.toml
lakesearch-compactor/src/: lib.rs  merge.rs
lakesearch-compactor/src/server/: main.rs
lakesearch-compactor/tests/: e2e.rs
lakesearch-compactor/tests/helpers/: mod.rs
lakesearch-core/: Cargo.toml
lakesearch-core/proptest-regressions/: posting.txt
lakesearch-core/src/: bm25.rs  boolean.rs  cas.rs  catalog_client.rs  lib.rs  metadata.rs  parquet_util.rs  posting.rs  runtime.rs  storage.rs  test_utils.rs  tokenizer.rs  types.rs
lakesearch-core/src/segment/: build.rs  mod.rs  read.rs  tests.rs
lakesearch-indexer/: Cargo.toml
lakesearch-indexer/src/: lib.rs
lakesearch-indexer/src/server/: config.rs  main.rs
lakesearch-indexer/tests/: e2e.rs
lakesearch-indexer/tests/helpers/: mod.rs
lakesearch-query/: Cargo.toml
lakesearch-query/src/: lib.rs  object_cache.rs  parquet_util.rs  query.rs
lakesearch-query/src/query/: evaluate.rs  mod.rs  pipeline.rs  plan.rs  rank.rs  types.rs  verify.rs
lakesearch-query/src/server/: api_types.rs  cache.rs  config.rs  error.rs  flight.rs  handlers.rs  main.rs  mod.rs  routes.rs  state.rs
lakesearch-query/tests/: integration.rs  server_integration.rs
lakesearch-query/tests/helpers/: mod.rs
spike/: Cargo.toml
spike/src/: main.rs
