[package]
name = "lakesearch-admin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lakesearch-admin"
path = "src/server/main.rs"

[dependencies]
lakesearch-core = { path = "../lakesearch-core" }
cascadq-client = { path = "../../cascadq/client-rs" }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
object_store = { version = "0.11", features = ["aws"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
lakesearch-core = { path = "../lakesearch-core", features = ["test-utils"] }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
