[package]
name = "lakesearch-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
lakesearch-core = { path = "../lakesearch-core", features = ["runtime"] }
lakesearch-query = { path = "../lakesearch-query" }
arrow = "54"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
object_store = { version = "0.11", features = ["aws"] }
parquet = { version = "54", features = ["arrow", "async", "object_store"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
lakesearch-core = { path = "../lakesearch-core", features = ["test-utils"] }
tempfile = "3"
