[package]
name = "lakesearch-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
lakesearch-core = { path = "../lakesearch-core", features = ["runtime", "io"] }
lakesearch-query = { path = "../lakesearch-query" }
lakesearch-indexer = { path = "../lakesearch-indexer" }
arrow = "54"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
object_store = { version = "0.11", features = ["aws"] }
arrow-json = "54"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
lakesearch-core = { path = "../lakesearch-core", features = ["test-utils"] }
tempfile = "3"
