[package]
name = "lakesearch-compactor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lakesearch-compact"
path = "src/server/main.rs"

[dependencies]
lakesearch-core = { path = "../lakesearch-core", features = ["runtime", "io"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
object_store = { version = "0.11", features = ["aws"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
lakesearch-core = { path = "../lakesearch-core", features = ["test-utils"] }
lakesearch-indexer = { path = "../lakesearch-indexer" }
lakesearch-query = { path = "../lakesearch-query" }
arrow = "54"
parquet = { version = "54", features = ["arrow"] }
bytes = "1"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
