[package]
name = "lakesearch-core"
version = "0.1.0"
edition = "2021"

[features]
test-utils = ["dep:parquet", "dep:arrow"]
runtime = ["dep:tokio", "dep:rayon"]

[dependencies]
crc32fast = "1"
fst = "0.4"
lz4_flex = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
unicode-normalization = "0.1"
parquet = { version = "54", features = ["arrow"], optional = true }
arrow = { version = "54", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
rayon = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
