[package]
name = "lakesearch-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lakesearch-ingest"
path = "src/server/main.rs"

[dependencies]
lakesearch-core = { path = "../lakesearch-core", features = ["runtime", "io"] }
cascadq-client = { git = "ssh://git@github.com/rohitrastogi/cascadq.git", package = "cascadq-client" }
arrow = "54"
parquet = { version = "54", features = ["arrow"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
object_store = { version = "0.11", features = ["aws"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
lakesearch-core = { path = "../lakesearch-core", features = ["test-utils"] }
lakesearch-admin = { path = "../lakesearch-admin" }
lakesearch-query = { path = "../lakesearch-query" }
bytes = "1"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
