[package]
name = "lakesearch-query"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lakesearch-query"
path = "src/server/main.rs"

[dependencies]
lakesearch-core = { path = "../lakesearch-core", features = ["runtime", "io"] }
parquet = { version = "54", features = ["arrow", "async", "object_store"] }
arrow = "54"
object_store = { version = "0.11", features = ["aws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
bytes = "1"
futures = "0.3"
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
tokio-stream = "0.1"
arrow-json = "54"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
lakesearch-core = { path = "../lakesearch-core", features = ["test-utils"] }
lakesearch-indexer = { path = "../lakesearch-indexer" }
arrow = "54"
parquet = { version = "54", features = ["arrow"] }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
